syntax = "proto3";

package event;

message Event {
  string event_id = 1;
  string instance_node_id = 2;
  uint64 timestamp = 3;
  bytes payload = 4;
}
